Updated the Croatian translation.

--- a/po/wesnoth-httt/hr.po
+++ b/po/wesnoth-httt/hr.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.5.0-svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-09-01 18:47+0200\n"
-"PO-Revision-Date: 2012-08-25 13:18+0100\n"
+"PO-Revision-Date: 2012-09-03 17:38+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -528,7 +528,7 @@ msgstr "Ne smijemo gledati nazad. Moramo požuriti!"
 #. [scenario]: id=02_Blackwater_Port
 #: data/campaigns/Heir_To_The_Throne/scenarios/02_Blackwater_Port.cfg:4
 msgid "scenario name^Blackwater Port"
-msgstr "ime scenarija^Luka Blackwater"
+msgstr "Luka Blackwater"
 
 #. [objective]: condition=win
 #: data/campaigns/Heir_To_The_Throne/scenarios/02_Blackwater_Port.cfg:18
@@ -6350,21 +6350,21 @@ msgstr ""
 #: data/campaigns/Heir_To_The_Throne/scenarios/23_Test_of_the_Clans.cfg:95
 #: data/campaigns/Heir_To_The_Throne/scenarios/24_Battle_for_Wesnoth.cfg:212
 msgid "Sir Alric"
-msgstr "Sir Alric"
+msgstr "Gospodin Alric"
 
 #. [side]: type=Grand Knight, id=Sir Ruga
 #. [then]
 #: data/campaigns/Heir_To_The_Throne/scenarios/23_Test_of_the_Clans.cfg:124
 #: data/campaigns/Heir_To_The_Throne/scenarios/24_Battle_for_Wesnoth.cfg:203
 msgid "Sir Ruga"
-msgstr "Sir Ruga"
+msgstr "Gospodin Ruga"
 
 #. [side]: type=Grand Knight, id=Sir Daryn
 #. [then]
 #: data/campaigns/Heir_To_The_Throne/scenarios/23_Test_of_the_Clans.cfg:153
 #: data/campaigns/Heir_To_The_Throne/scenarios/24_Battle_for_Wesnoth.cfg:194
 msgid "Sir Daryn"
-msgstr "Sir Daryn"
+msgstr "Gospodin Daryn"
 
 #. [side]: type=Grand Knight, id=Bayar
 #. [then]
@@ -6689,7 +6689,7 @@ msgstr "Heford"
 #. [side]: type=Cavalier, id=Sir Kalm
 #: data/campaigns/Heir_To_The_Throne/scenarios/24_Battle_for_Wesnoth.cfg:141
 msgid "Sir Kalm"
-msgstr "Sir Kalm"
+msgstr "Gospodin Kalm"
 
 #. [message]: speaker=Asheviere
 #: data/campaigns/Heir_To_The_Throne/scenarios/24_Battle_for_Wesnoth.cfg:235
