Updated the Croatian translation.

--- a/po/wesnoth-anl/hr.po
+++ b/po/wesnoth-anl/hr.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.5.0-svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-24 21:37+0200\n"
-"PO-Revision-Date: 2012-08-25 14:10+0100\n"
+"PO-Revision-Date: 2012-09-03 17:26+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -57,7 +57,7 @@ msgstr "Moraš preživjeti do 25. poteza."
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:81
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:96
 msgid "teamname^Team 1"
-msgstr "teamname^Tim 1"
+msgstr "Tim 1"
 
 #. [side]: type=Death Knight
 #. [side]: type=Orcish Sovereign
@@ -66,7 +66,7 @@ msgstr "teamname^Tim 1"
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:168
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:195
 msgid "teamname^Team 2"
-msgstr "teamname^Tim 2"
+msgstr "Tim 2"
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:407
@@ -349,7 +349,7 @@ msgid ""
 "$sf_player_name|, since our wisdom exceeds yours I have instructed my "
 "scholars to further your understanding of agriculture."
 msgstr ""
-"$player_name|, time što naše znanje premašuje vaše, rekao sam svojim "
+"$sf_player_name|, time što naše znanje premašuje vaše, rekao sam svojim "
 "naučenjacima da vam pomognu shvatiti agrikulturu."
 
 #. [message]: speaker=unit
